# mensa

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
animation/: package.json  tsconfig.json
animation/src/: MensaPromo.tsx  Root.tsx
animation/src/components/: CodeFlow.tsx  FeatureCards.tsx  Finale.tsx  GlassCard.tsx  LogoReveal.tsx  Particles.tsx
animation/src/styles/: colors.ts
docs/: PRD-Review-Mode.md  PRD-Threads.md  PRD-Visual-Git-Integration.md
scripts/: claude-query.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  lib.rs  main.rs
src/lib/components/: Chat.svelte  CommandPalette.svelte  DiffViewer.svelte  GlassIcon.svelte  InlineTool.svelte  Markdown.svelte  Onboarding.svelte  PlanApproval.svelte  QuestionCard.svelte  SessionTabs.svelte  Settings.svelte  Sidebar.svelte  SubagentGroup.svelte  Terminal.svelte  TerminalPanel.svelte  ToolPanel.svelte  VimInput.svelte  index.ts
src/lib/components/git/: BranchTimeline.svelte  CommitDialog.svelte  GitFileItem.svelte  GitStatusPanel.svelte  PRDialog.svelte  index.ts
src/lib/components/review/: FindingCard.svelte  index.ts  (+8 more)
src/lib/constants/: reviewPresets.ts
src/lib/services/: attachments.ts  claude.ts  files.ts  git.ts  review.ts  theme.ts
src/lib/stores/: app.svelte.ts  git.svelte.ts  review.svelte.ts  sessions.svelte.ts  terminal.svelte.ts
src/lib/types/: git.ts  index.ts  review.ts
src/routes/: +page.svelte
