[package]
name = "mensa"
version = "0.1.2"
description = "A GUI wrapper and IDE for Claude Code"
authors = ["Sami Hindi <sami@samihindi.com>"]
license = "MIT WITH Commons-Clause"
repository = "https://github.com/FujiwaraChoki/mensa"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mensa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

